--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -39,6 +39,7 @@
         <geronimo.javamail.version>1.7.1</geronimo.javamail.version>
         <jasypt.version>1.9.2</jasypt.version>
         <junit.version>4.12</junit.version>
+        <kerby.version>1.0.0</kerby.version>
         <log4j.version>1.2.17</log4j.version>
         <neethi.version>3.0.3</neethi.version>
         <opensaml.version>3.2.0</opensaml.version>
