--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -48,7 +48,7 @@
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <xalan.version>2.7.2</xalan.version>
         <xz.version>1.6</xz.version>
-        <xmlsec.version>2.1.0-SNAPSHOT</xmlsec.version>
+        <xmlsec.version>2.1.0</xmlsec.version>
         <xmlunit.version>1.6</xmlunit.version>
         
         <!-- OSGi related properties -->
