Fixing the previous merge a bit
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1810340 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
         <module>ws-security-common</module>
         <module>ws-security-dom</module>
         <module>ws-security-stax</module>
+        <module>ws-security-web</module>
         <module>integration</module>
         <module>ws-security-policy-stax</module>
         <!-- <module>performance</module>-->
