--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -43,7 +43,7 @@
         <neethi.version>3.1.0</neethi.version>
         <opensaml.version>3.1.1</opensaml.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <woodstox.core.asl.version>4.4.1</woodstox.core.asl.version>
+        <woodstox.core.version>5.0.3</woodstox.core.version>
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <xalan.version>2.7.2</xalan.version>
         <xmlsec.version>2.0.9</xmlsec.version>
@@ -80,9 +80,9 @@
                 <version>${neethi.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.codehaus.woodstox</groupId>
-                <artifactId>woodstox-core-asl</artifactId>
-                <version>${woodstox.core.asl.version}</version>
+                <groupId>com.fasterxml.woodstox</groupId>
+                <artifactId>woodstox-core</artifactId>
+                <version>${woodstox.core.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
