--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -23,7 +23,7 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.1.12-SNAPSHOT</version>
+        <version>2.1.12</version>
     </parent>
     <artifactId>wss4j-ws-security-dom</artifactId>
     <name>Apache WSS4J DOM WS-Security</name>
