--- a/policy/pom.xml
+++ b/policy/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.apache.wss4j</groupId>
         <artifactId>wss4j-parent</artifactId>
         <relativePath>../parent/pom.xml</relativePath>
-        <version>2.1.12</version>
+        <version>2.1.13-SNAPSHOT</version>
     </parent>
     <artifactId>wss4j-policy</artifactId>
     <name>Apache WSS4J WS-SecurityPolicy model</name>
