--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -46,7 +46,7 @@
         <woodstox.core.version>5.0.3</woodstox.core.version>
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <xalan.version>2.7.2</xalan.version>
-        <xmlsec.version>2.0.11-SNAPSHOT</xmlsec.version>
+        <xmlsec.version>2.0.10</xmlsec.version>
         <xmlunit.version>1.6</xmlunit.version>
         
         <!-- OSGi related properties -->
