--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -32,7 +32,7 @@
     <url>http://ws.apache.org/wss4j/</url>
 
     <properties>
-        <apacheds.version>2.0.0-M24</apacheds.version>
+        <apacheds.version>2.0.0.AM25</apacheds.version>
         <bcprov.version>1.60</bcprov.version>
         <commons.compress.version>1.18</commons.compress.version>
         <ehcache.version>2.10.5</ehcache.version>
