Adding Automatic-Module-Name entries
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1839337 13f79535-47bb-0310-9956-ffa450edef68

--- a/bindings/pom.xml
+++ b/bindings/pom.xml
@@ -31,6 +31,7 @@
 
     <properties>
         <cobertura.skip>true</cobertura.skip>
+        <wss4j.module.name>org.apache.wss4j.bindings</wss4j.module.name>
     </properties>
 
     <dependencies>
