--- a/ws-security-dom/pom.xml
+++ b/ws-security-dom/pom.xml
@@ -32,6 +32,7 @@
         <wss4j.osgi.dynamic.import>
             org.bouncycastle.jce.provider
         </wss4j.osgi.dynamic.import>
+        <wss4j.module.name>org.apache.wss4j.dom</wss4j.module.name>
     </properties>
         
     <build>
