--- a/ws-security-policy-stax/pom.xml
+++ b/ws-security-policy-stax/pom.xml
@@ -29,6 +29,10 @@
     <artifactId>wss4j-ws-security-policy-stax</artifactId>
     <name>Apache WSS4J Streaming WS-SecurityPolicy</name>
 
+    <properties>
+        <wss4j.module.name>org.apache.wss4j.policy.stax</wss4j.module.name>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.wss4j</groupId>
