Updating to Santuario 2.2.0-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/webservices/wss4j/trunk@1839586 13f79535-47bb-0310-9956-ffa450edef68

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -48,7 +48,7 @@
         <wsdl4j.version>1.6.3</wsdl4j.version>
         <xalan.version>2.7.2</xalan.version>
         <xz.version>1.8</xz.version>
-        <xmlsec.version>2.1.2</xmlsec.version>
+        <xmlsec.version>2.2.0-SNAPSHOT</xmlsec.version>
         <xmlunit.version>1.6</xmlunit.version>
         
         <!-- OSGi related properties -->
